<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_fields_layout_margin"
        android:layout_marginEnd="@dimen/input_fields_layout_margin"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/text_choose_user_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_as"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input_layout_login"
            app:checkedButton="@+id/button_type_doctor_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_choose_user_type"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/button_type_doctor_login"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_type_patient_login"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient"
                android:textAllCaps="false" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input_layout_login"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/input_layout_login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_button_user_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_field"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input_layout_login"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            android:text="@string/forgot_password_question"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_login_password"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_login_button"
            android:layout_marginTop="28dp"
            android:background="@drawable/design_selector_button_login_bg"
            android:gravity="center"
            android:text="@string/text_login"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_or_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/or_sign_up"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
